# ai-git-summarize

./: .gitignore  .roomodes  CONVENTIONS-PYTHON.md  CONVENTIONS.md  HOWTO_pytest.md  LICENSE  README.md  projects-groups.yaml  pyproject.toml  test_model_alias.py
.roo/: mcp.json
ai-docs/: commit_analysis_plan.md  productivity_improvements.md
ai-plans/: 251201__PLAN__fix-multiline-commit-message.md  retry_mechanism_implementation_plan.md
ai-plans/done/: commit_message_format_improvements.md  feature_implementation_plan__generate_report.md  history_summarization_plan.md  openrouter_command_refactoring_plan.md
ai_docs/: model_alias_resolution_plan.md  productivity_improvements.md
ai_docs/done/: command_refactoring_plan.md  model_alias_resolution_plan.md  pytest_integration_plan.md  refactor_plan.md
ai_git/: README.md  __init__.py  ai_client.py  ai_summarizer.py  app.py  cli.py  config_utils.py  git_operations.py  models.py  prompts.py  retry_utils.py
ai_git/commands/: analyze_commit.py  feedback.py  generate_report.py  git_summary.py  summarize_history.py
config/: model-aliases.yaml
git_summarize/: ai_summarizer.py  cli.py  client.py  git.py  git_operations.py  models.py  openrouter_models.py  prompt_builder.py  prompts.py  summarizer.py
git_summarize.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
git_summarize/ai_docs/: refactor_plan.md
git_summarize/commands/: analyze_commit.py  feedback.py  generate_report.py  git_summary.py  openrouter.py  (+1 more)
tests/: test_ai_summarizer.py  test_model_alias.py  test_retry_utils.py
